--- a/spec/javascripts/fixtures/product.html
+++ b/spec/javascripts/fixtures/product.html
@@ -1,4 +1,5 @@
-<div class="trip_links">
-  <a href="/trips/1" class="detail_toggle">Show Details</a>
-  <p class="detail hidden">This text should be hidden.</p>
+<div class="topic_links">
+  <h2>Topic Name</h2>
+  <a href="/topics/1" class="detail_toggle">Show Details</a>
+  <p class="detail hidden">Topic description.</p>
 </div>
