--- a/spec/javascripts/fixtures/topic.html
+++ b/spec/javascripts/fixtures/topic.html
@@ -1,5 +1,7 @@
-<div class="topic_links">
-  <h2>Topic Name</h2>
-  <a href="/topics/1" class="detail_toggle">Show Details</a>
-  <p class="detail hidden">Topic description.</p>
+<div class="topics_container">
+  <div class="topic_links">
+    <h2>Topic Name</h2>
+    <a href="/topics/1" class="detail_toggle">Show Details</a>
+    <p class="detail hidden">Topic description.</p>
+  </div>
 </div>
